--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "hexo-admin": "^0.1.3",
+    "hexo-generator-minify": "^0.1.0",
     "hexo-renderer-ejs": "*",
     "hexo-renderer-marked": "*",
     "hexo-renderer-sass": "0.0.3",
