--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ language:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://danielmargol.com
 root: /
-permalink: :year/:month/:day/:title/
+permalink: p/:year/:month/:day/:title/
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
