--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ language:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://danielmargol.com
 root: /
-permalink: p/:year/:month/:day/:title/
+permalink: post/:year/:month/:day/:title/
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
@@ -89,10 +89,3 @@ deploy:
   repo: https://github.com/dmarg/dmarg.github.io.git
   branch: master
   message:
-
-# SASS
-node_sass:
-  outputStyle: nested ('nested' and 'compressed' are supported)
-  precision: 8
-  imagePath: images
-  sourceComments: none (can be one of 'none', 'normal', 'map')
