--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "hexo-site",
-  "version": "2.8.3",
+  "name": "dmarg.github.io",
+  "version": "0.1.0",
   "private": true,
+  "hexo": {
+    "version": "3.0.1"
+  },
   "dependencies": {
-    "hexo-admin": "^0.1.3",
-    "hexo-generator-minify": "^0.1.0",
-    "hexo-renderer-ejs": "*",
-    "hexo-renderer-marked": "*",
-    "hexo-renderer-sass": "0.0.3",
-    "hexo-renderer-stylus": "*"
+    "hexo": "^3.0.0",
+    "hexo-generator-archive": "^0.1.0",
+    "hexo-generator-category": "^0.1.0",
+    "hexo-generator-index": "^0.1.0",
+    "hexo-generator-tag": "^0.1.0",
+    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-stylus": "^0.2.0",
+    "hexo-server": "^0.1.2"
   }
 }
