--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ disqus_shortname: danielmargol
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: github
+  type: git
   repo: https://github.com/dmarg/dmarg.github.io.git
   branch: master
   message:
