--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://danielmargol.com
+url: //localhost:4000
 root: /
 permalink: post/:year/:month/:day/:title/
 permalink_defaults:
@@ -28,6 +28,10 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
+archive: 1
+category: 1
+tag: 1
+
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
@@ -35,7 +39,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -60,10 +64,16 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+# RSS
+feed:
+    type: atom
+    path: atom.xml
+    limit: 20
+
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: pureflat
+theme: tranquilpeak
 
 # Disqus
 disqus_shortname: danielmargol
