--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://danielmargol.com
+url: //localhost:4000
 root: /
 permalink: post/:year/:month/:day/:title/
 permalink_defaults:
